# skyflo

./: .gitignore  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.yaml  install.sh  run_tests.sh  skyflo-0.1.0.tgz  skyflo-0.6.1.tgz  skyflo-0.7.0.tgz  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deployment-ci.yml  discord-gfi.yml  k8s-validate.yml  release.yml
charts/skyflo/: .helmignore  Chart.yaml  values.schema.json  values.yaml
charts/skyflo/crds/: skyfloai-crd.yaml
charts/skyflo/templates/: NOTES.txt  _helpers.tpl  controller-deployment.yaml  engine-configmap.yaml  engine-deployment.yaml  engine-secrets.yaml  engine-service.yaml  mcp-configmap.yaml  mcp-deployment.yaml  mcp-service.yaml  postgres.yaml  (+7 more)
deployment/: README.md  controller.Dockerfile  engine.Dockerfile  engine.entrypoint.sh  install.sh  install.yaml  local.docker-compose.yaml  local.install.yaml  local.kind.yaml  local.test-deploy.yaml  mcp.Dockerfile  mcp.entrypoint.sh  test-kind.yaml  ui.Dockerfile  uninstall.sh  verify-argo-plugin.sh
deployment/config/: engine-configmap.yaml  mcp-configmap.yaml  ui-configmap.yaml
deployment/engine/: Dockerfile  entrypoint.sh
deployment/mcp/: Dockerfile  entrypoint.sh
deployment/ui/: Dockerfile  nginx.conf  proxy.Dockerfile
docs/: api.md  architecture.md  examples.md  install.md
engine/: .env.example  .env.kind.local  .gitignore  README.md  aerich.ini  alembic.ini  pyproject.toml
engine/docs/: switching_llm_models.md
engine/migrations/models/: 0_20250407154142_init.py  1_20250912203310_update.py  3_20260319000000_add_message_token_usage.py  4_20260508000000_add_memory.py
engine/scripts/: disable_rate_limiting.sh  generate_migration.py  init_db.py  setup_migration.py  start_redis.sh
engine/src/api/: __init__.py  asgi.py  config.py  llm_schemas.py  main.py
engine/src/api/agent/: graph.py  model_node.py  prompts.py  state.py  stop.py
engine/src/api/config/: __init__.py  database.py  rate_limit.py  settings.py
engine/src/api/domain/models/: __init__.py  conversation.py  user.py
engine/src/api/domain/schemas/: team.py
engine/src/api/endpoints/: __init__.py  agent.py  analytics.py  auth.py  conversation.py  health.py  integrations.py  memory.py  memory_agent.py  team.py
engine/src/api/integrations/jenkins/: __init__.py  jenkins.py  secret.yaml
engine/src/api/memory/: __init__.py  events.py  formatter.py  policy.py  repository.py  retrieval.py  safety.py  schemas.py  seed.py  service.py  tools.py
engine/src/api/middleware/: __init__.py  logging_middleware.py
engine/src/api/models/: __init__.py  conversation.py  integration.py  memory.py  user.py
engine/src/api/repositories/: __init__.py  database.py
engine/src/api/schemas/: team.py
engine/src/api/services/: approvals.py  auth.py  checkpointer.py  conversation_persistence.py  integrations.py  limiter.py  llm_client.py  mcp_client.py  rbac.py  stop_service.py  title_generator.py  tool_executor.py  tools_cache.py
engine/src/api/utils/: __init__.py  clock.py  helpers.py  sanitization.py
engine/src/api/web/dependencies/: __init__.py  rate_limit.py
engine/src/api/web/endpoints/: __init__.py  auth.py  chat.py  health.py  team.py  ws.py
engine/src/api/web/middleware/: __init__.py  logging_middleware.py
engine/src/api/workflow/: __init__.py  manager.py
engine/src/api/workflow/agents/: __init__.py  base.py
engine/src/api/workflow/agents/executor/: __init__.py  main.py  prompt_templates.py  types.py
engine/src/api/workflow/agents/planner/: __init__.py  main.py  prompt_templates.py  types.py
engine/src/api/workflow/agents/verifier/: __init__.py  main.py  prompt_templates.py  types.py
kubernetes-controller/: README.md  go.mod
kubernetes-controller/controllers/: skyfloai_controller.go
kubernetes-controller/hack/: boilerplate.go.txt
mcp/: .env.example  .gitignore  LICENSE.txt  README.md  main.py  pyproject.toml  run_tests.sh
mcp/config/: server.py  settings.py
mcp/docs/: helm_values_usage.md
mcp/src/mcp_server/: __about__.py  __init__.py  asgi.py
mcp/src/mcp_server/api/: __init__.py
mcp/src/mcp_server/api/v1/: __init__.py  health.py
mcp/src/mcp_server/api/v1/tools/: __init__.py
mcp/src/mcp_server/config/: settings.py
mcp/src/mcp_server/tools/: __init__.py  _utils.py  permissions.py  registry.py
mcp/src/mcp_server/tools/argo/: __init__.py  _argo_rollouts.py  tool.py
mcp/src/mcp_server/tools/common/: mcp.py  models.py
mcp/src/mcp_server/tools/helm/: __init__.py  _helm.py  tool.py
mcp/src/mcp_server/tools/k8s/: __init__.py  _kubectl.py  tool.py
mcp/src/mcp_server/tools/utils/: helpers.py
mcp/src/mcp_server/utils/: retry.py
mcp/tests/: __init__.py  conftest.py  test_tools_argo.py  test_tools_helm.py  test_tools_jenkins.py  test_tools_kubectl.py
mcp/tests/tools/: test_argo.py  test_helm.py  test_jenkins.py  test_kubectl.py
mcp/tests/utils/: test_commands.py
mcp/tools/: __init__.py  argo.py  helm.py  jenkins.py  kubectl.py  memory.py
mcp/utils/: commands.py
src/lib/: mcp-error-handler.ts
ui/: .env.example  .eslintrc.json  .gitignore  LICENSE  README.md  design_system.md  package-lock.json  package.json  tailwind.config.ts
(+112 files in other folders)
